--- a/BSC_Start.slim
+++ b/BSC_Start.slim
@@ -8,6 +8,8 @@ initialize() {
 	initializeGenomicElement(g1, 0, 99999); //g1 has length 10'000 bases, maybe change -> second genomic element?
 	initializeRecombinationRate(1e-7); // specifies recombination rate
 
+	initializeSex("A"); //creates males and females in the population
+
 	// define some variables
 	
 	//defineConstant("K_p1", 140);     // carrying capacity of captive pop
@@ -22,15 +24,17 @@ initialize() {
 }
 
 //bottleneck kicks in after 100 generations
-100 early() {
+//100 early() {
+
+100 early() { p1.setSubpopulationSize(16); }
 	// Randomly select 16 survivors
-    remainingInds = sample(p1.individuals, 16);
+    //remainingInds = sample(p1.individuals, 16);
     
     // Reset population p1 to these 16 individuals
-    p1.setIndividuals(remainingInds);
+   // p1.subsetIndividuals(remainingInds);
     
-    cat("Population reduced to 16 individuals due to drift.\n");
-}
+    //cat("Population reduced to 16 individuals due to drift.\n");
+//}
 
 
 //Non-ranodom mating for 30 years due to breeding programs
@@ -38,42 +42,62 @@ initialize() {
 //mating according to the pedigree data...? -> Add later, first/now non-random mating selecting for low kinship
 
 
-101:130 mateChoice(p1) {
+101:130 early() {
     //Every individual gets to mate in each generation, selecting for low kinship... (p1 = captive population)
 	// Randomly shuffle individuals to prevent bias - this line creates a new list where every individual from p1 gets picked only once
-    shuffledInds = sample(p1.individuals, size(p1.individuals), replace = F);
+   // shuffledInds = sample(p1.individuals, size(p1.individuals), replace = F);
     
     // Remove the last individual from shuffledInds if the number is odd to make the size even
-    if (size(shuffledInds) % 2 == 1) { //if the size is odd, we have a problem -> one will not get to mate
-        shuffledInds = shuffledInds[0:(size(shuffledInds)-1)]; //-1 since we want to get rid of one ind. -> last one from list will not mate (randomly)
-    }
+  //  if (size(shuffledInds) % 2 == 1) { //if the size is odd, we have a problem -> one will not get to mate
+     //   shuffledInds = shuffledInds[0:(size(shuffledInds)-1)]; //-1 since we want to get rid of one ind. -> last one from list will not mate (randomly)
+   // }
 
     //Create an empty list to store pairs
-    paired = c();
+   // paired = c();
 
 
     //Find optimal pairings, until all individuals are paired (until shuffledIns = 0)
-    while (size(shuffledInds) > 0) {
-        ind1 = shuffledInds[0]; // Pick the first available individual
-        shuffledInds = shuffledInds[1:(size(shuffledInds)-1)]; // Remove it from the list, -1 to not go out of bound
+    
+//CReate new objects containing either females or males
+females = p1.individuals[p1.individuals.sex == "F"];   
+males = p1.individuals[p1.individuals.sex == "M"];
+    
+    
+    
+    while (size(females) > 0) {
+    
+    
+        reproduction() {
+        ind1 = females[0]; // Pick the first available female
+        females = females[1:(size(females)-1)]; // Remove it from the list, -1 to not go out of bound (starts from 0)
 
         // Find the least related mate from the remaining individuals
-        bestMate = shuffledInds.minByValue(ind1.relatedness(shuffledInds));
+        bestMate = min(ind1.relatedness(males));
 
         // Pair them
-        ind1.setMate(bestMate);
+        //ind1.setMate(bestMate);
         
         // Remove bestMate from the available list
-        shuffledInds = shuffledInds - bestMate;
+        //males = males - bestMate;
 
         // Store the pairing
-        paired = c(paired, c(ind1, bestMate));
-    }
+        //paired = c(paired, c(ind1, bestMate));
+        
+
+         // Add offspring from this specific mating --> How many per pair??
+        p1.addCrossed(ind1, bestMate, count=1);
+        
+		}
+        
+        
+   	}
 
     cat("Optimal mate pairings completed.\n");
+    cat(ind1);
     //Here i could maybe print out more - maybe i could carry on the pedigree with these pairings...?
+    
+ 
 }
-
 
 131 early() {
     // Randomly select 9 individuals from p1
@@ -195,7 +219,7 @@ initialize() {
 
     // Write header (only if file is empty)
     if (file.size == 0) {
-        file.writeLine("Generation,IndividualID,Population,IndividualHeterozygosity,MeanHeterozygosity_p1,MeanHeterozygosity_p2");
+        writeFile("/Users/benutzerin/Documents/GitHub/2502_emma_bsc/Outputs/heterozygosity_output.csv", "Generation,IndividualID,Population,IndividualHeterozygosity,MeanHeterozygosity_p1,MeanHeterozygosity_p2");
     }
 
     // Extract all genomes from individuals in p1 and p2
@@ -209,13 +233,13 @@ initialize() {
     // Write individual heterozygosity for p1
     for (ind in p1.individuals) {
         indHet = calcHeterozygosity(ind.genomes);
-        file.writeLine(paste(231, ind.id, "p1", indHet, heterozygosity_p1, heterozygosity_p2, sep=","));
+        writefile(paste(231, ind.id, "p1", indHet, heterozygosity_p1, heterozygosity_p2, sep=","));
     }
 
     // Write individual heterozygosity for p2
     for (ind in p2.individuals) {
         indHet = calcHeterozygosity(ind.genomes);
-        file.writeLine(paste(231, ind.id, "p2", indHet, heterozygosity_p1, heterozygosity_p2, sep=","));
+        writefile(paste(231, ind.id, "p2", indHet, heterozygosity_p1, heterozygosity_p2, sep=","));
     }
 
     // Close the file
