--- a/Start_stepbystep_WF.slim
+++ b/Start_stepbystep_WF.slim
@@ -16,33 +16,37 @@ initialize() {
 
 1 early() {
 	//defining population size at the beginning
-	sim.addSubpop("p1", 10000); //large starting population of 10'000 individuals
+	sim.addSubpop("p1", 10000, 0.6); //large starting population of 10'000 individuals
 }
+
+
 
 //bottleneck kicks in after 100 generations
 //100 early() {
 
-100 early() { p1.setSubpopulationSize(16); }
+100 early() { p1.setSubpopulationSize(16);}
 	// Randomly select 16 survivors
- 
  // Gradually increase population until 140 (K_p1) is reached
-early() {
-    currentSize = size(p1.individuals);  // Get current population size
-
-    if (currentSize < K_p1) {  // Stop once carrying capacity is reached
-        newSize = min(currentSize + 10, 140);  // Increase by 10 each generation
-        p1.setSubpopulationSize(newSize);
-    }
-}
+//early() {
+//    currentSize = size(p1.individuals);  // Get current population size
+//
+//    if (currentSize < K_p1) {  // Stop once carrying capacity is reached
+//        newSize = min(currentSize + 10, 140);  // Increase by 10 each generation
+//        p1.setSubpopulationSize(newSize);
+//    }
+//}
 
 
 //Non-ranodom mating for 30 years due to breeding programs
 
 //mating according to the pedigree data...? -> Add later, first/now non-random mating selecting for low kinship
 
+
 101:130 mateChoice() {
+	
 	females = subpop.individuals[subpop.individuals.sex == "F"]; //get all females
 	males = subpop.individuals[subpop.individuals.sex == "M"]; // get all males
+
 	cat("Number of females: " + size(females) + "\n");
 	cat("Number of males: " + size(males) + "\n");
 	for (ind in females) { 
@@ -55,13 +59,23 @@ early() {
             males = males[males != bestMate]; //removes bestMate from the list, so that all males only get to pair once
             return bestMate;
             }
-            cat("Number of individuals: " + size(p1.individuals) + "\n");
-    }
+            //cat("Number of individuals: " + size(p1.individuals) + "\n");
+            //cat("Best Mate found" + "\n");
+    
     return NULL;  // No valid mate found
     cat("Optimal mate pairings completed.\n");
 }
 
+	cat("Number of individuals: " + size(p1.individuals) + "\n");
+	cat("Best Mate found" + "\n");
+	
+}
 
+130 early() { 
+	p1.setSubpopulationSize(140); 
+	
+	}
+//}
      
 
 
