--- a/Start_stepbystep_WF.slim
+++ b/Start_stepbystep_WF.slim
@@ -25,8 +25,12 @@ initialize() {
 //bottleneck kicks in after 100 generations
 //100 early() {
 
+//Increase here to 100'000
+// MAybe soft code the generations
+
 100 early() { p1.setSubpopulationSize(16);}
-	// Randomly select 16 survivors --> Not sure if it really selects 16 individuals from p1
+	// Randomly select 16 survivors --> Not sure if it really selects 16 individuals from p1 (bottleneck)
+	// If it takes too long, let it run once and use the data it generated in another file.
 
 //Non-ranodom mating for 30 years due to breeding programs
 
