--- a/Start_stepbystep_WF.slim
+++ b/Start_stepbystep_WF.slim
@@ -25,7 +25,7 @@ initialize() {
 //bottleneck kicks in after 100 generations
 //100 early() {
 
-//Increase here to 100'000
+//Increase here to 100'000 (10 n until equilibrium)
 // MAybe soft code the generations
 
 100 early() { p1.setSubpopulationSize(16);}
