--- a/Read_file.slim
+++ b/Read_file.slim
@@ -12,60 +12,10 @@ initialize() {
 
 	initializeSex("A"); //creates males and females in the population
 
-	defineConstant("K_p1", 140); //carrying capacity for p1
+	//defineConstant("K_p1", 1000); //carrying capacity for p1
 }
 
-
-100001 early() {
-	sim.readFromPopulationFile("final_output.trees");
-	// p1 now exists, restored from file
-   catn("Restored population size: " + size(p1.individuals));
- //  p1.setSubpopulationSize(16);
-	// Randomly select 16 survivors
-	catn("population size: " + size(p1.individuals));
-	heterozygosity = calcHeterozygosity(p1.genomes);
-	cat("Mean heterozygosity = " + heterozygosity + "\n");
-}
-
-
-
-////bottleneck kicks in after 100 generations
-////100 early() {
-//
-////Increase here to 100'000 (10 n until equilibrium)
-//// MAybe soft code the generations
-//
-//100 early() { p1.setSubpopulationSize(16);}
-//	// Randomly select 16 survivors --> Not sure if it really selects 16 individuals from p1 (bottleneck)
-//	// If it takes too long, let it run once and use the data it generated in another file.
-//
-////Non-ranodom mating for 30 years due to breeding programs
-//
-////mating according to the pedigree data...? -> Add later, first/now non-random mating selecting for low kinship -> not sure if possible
-//
-
-// just uncomment it for original code
-//100001 : 100030 mateChoice() {
-//	
-//	females = subpop.individuals[subpop.individuals.sex == "F"]; //get all females
-//	males = subpop.individuals[subpop.individuals.sex == "M"]; // get all males
-//
-//    if (individual.sex == F & size(males) > 0) {  // If female
-//      // Compute relatedness for each male
-//		relatedness = males.relatedness(individual);
-//      // Choose the male with the minimum relatedness
-//		bestMate = males[whichMin(relatedness)]; //searches for the best mate depending on relatedness
-//		males = males[males != bestMate]; //removes bestMate from the list, so that all males only get to pair once
-//		return bestMate;
-//	}
-//   
-//		return NULL;  // No valid mate found
-//	
-//}
-
-//Trying something here to see if mateChoice is working as I want...
-
-100001 : 100030 mateChoice() {
+mateChoice() {
 	females = subpop.individuals[subpop.individuals.sex == "F"]; // Get all females
 	males = subpop.individuals[subpop.individuals.sex == "M"]; // Get all males
 
@@ -78,14 +28,10 @@ initialize() {
 //   	cat("Female " + individual.index + " - Male " + males[i].index + " relatedness: " + relatedness[i] + "\n");
 //	}
 
-	bestIndex = which(relatedness == min(relatedness)); // gives out all males which have lowest relatedness value
+	bestIndex = which(relatedness == max(relatedness)); // gives out all males which have lowest relatedness value
 	//cat("Best Index = " + bestIndex +  "\n");
 	// Randomly shuffle individuals to prevent bias - this line creates a new list where every individual from p1 gets picked only once
-    shuffledInds = sample(males[bestIndex], size(males[bestIndex]), replace = F);
-//    if (length(shuffledInds) > 0) {
-//    cat("shuffled individuals" + paste(shuffledInds)  + "\n");
-//    }
-    
+    shuffledInds = sample(males[bestIndex], size(males[bestIndex]), replace = F);    
 	bestMate = shuffledInds[0];
 //	cat(">>> Female " + individual.index + " chooses Male " + bestMate.index +  " with relatedness " + relatedness[bestIndex] + "\n");
 		// Remove selected male from pool
@@ -97,20 +43,34 @@ initialize() {
 }
 
 
-
-100001 : 100030 early() {
-	newSize = asInteger(p1.individualCount * 1.1); //increas popsize every generation by the factor 1.1
-	if (newSize >= K_p1) 
-	{
-		newSize = K_p1;
-	}	
-	p1.setSubpopulationSize(newSize);
-	cat("Population size =" + size(p1.individuals) +  "\n");
-
-
+100001 early() {
+	sim.readFromPopulationFile("1000_1e-7_output.trees");
+	// p1 now exists, restored from file
+   catn("Restored population size: " + size(p1.individuals));
+ 	//p1.setSubpopulationSize(1000);
+	// Randomly select 16 survivors
+	//catn("population size: " + size(p1.individuals));
+	heterozygosity = calcHeterozygosity(p1.genomes);
+	cat("Mean heterozygosity = " + heterozygosity + "\n");
 }
 
-100030 late() {
+//Trying something here to see if mateChoice is working as I want...
+
+
+////uncomment here to have a K
+//100002 : 100030 early() {
+//	newSize = asInteger(p1.individualCount * 1.1); //increas popsize every generation by the factor 1.1
+//	if (newSize >= K_p1) 
+//	{
+//		newSize = K_p1;
+//	}	
+//	p1.setSubpopulationSize(newSize);
+//	cat("Population size =" + size(p1.individuals) +  "\n");
+//
+//
+//}
+
+100001 : 100030 early() {
 	// Print mean heterozygosity across the population
 	heterozygosity = calcHeterozygosity(p1.genomes);
 	cat("Mean heterozygosity = " + heterozygosity + "\n");
@@ -120,4 +80,6 @@ initialize() {
 	cat("Number of males: " + size(males) + "\n");
 }
 
-
+100031 late(){
+	sim.simulationFinished();
+}
